--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -21,42 +21,14 @@
 
 {% endblock %}
 
-{% block body %}
+{% block blog_heading %}
+<p class="heading-text padding-top padding-bottom text-center">
+    Write Away  <img src="https://img.icons8.com/cute-clipart/64/000000/airplane-window-open.png">
+</p>
+{% endblock %}
+
+{% block blog_body %}
 <div class="container">
-    <p class="heading-text padding-top padding-bottom text-center">
-        Write Away  <img src="https://img.icons8.com/cute-clipart/64/000000/airplane-window-open.png">
-    </p>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="text-center">
-                <div class="blog-nav-item">
-                    <i class="fas fa-bars"></i>
-                    <a class="gray-link" href="{% url 'blog:blog-list' %}">
-                        Portal
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-th-large"></i> 
-                    <a class="gray-link" href="#">
-                        My Posts
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-id-card"></i>
-                    <a class="gray-link" href="#">
-                        My Profile
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-users"></i> 
-                    <a class="gray-link" href="#">
-                        Users
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr>
     <form method='POST'>
       {% csrf_token %}
       <div class="form-group padding-top">
