--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -49,6 +49,13 @@
         </div>
     </div>
     <hr>
+    {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li class="{{ message.tags }}">{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
     <form method="POST">
         {% csrf_token %}
         <div class="form-group">
