--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -14,8 +14,9 @@
 
 {% block body %}
 
+<div class="container">
     {% block blog_heading %}
-    <div class="container">
+    
         <p class="heading-text padding-top padding-bottom text-center">
             Portal 
             <span class="blog-heading-icon">
@@ -27,40 +28,69 @@
             <div class="col-lg-12">
                 <div class="text-center">
                     {% block navbar_item_1 %}
-                    <div class="blog-nav-item">
-                        <i class="fas fa-bars"></i>
-                        <a class="gray-link" href="{% url 'blog:blog-list' %}">
-                            Portal
-                        </a>
-                    </div>
+                        <div class="blog-nav-item">
+                            <i class="fas fa-bars"></i>
+                            <a class="gray-link" href="{% url 'blog:blog-list' %}">
+                                Portal
+                            </a>
+                        </div>
                     {% endblock %}
 
-                    {% block navbar_item_2 %}
-                    <div class="blog-nav-item">
-                        <i class="fas fa-th-large"></i> 
-                        <a class="gray-link" href="#">
-                            My Posts
-                        </a>
-                    </div>
-                    {% endblock %}
+                    {% if user.is_authenticated %}
+                        {% block navbar_item_2 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-th-large"></i> 
+                                <a class="gray-link" href="#">
+                                    My Posts
+                                </a>
+                            </div>
+                        {% endblock %}
 
-                    {% block navbar_item_3 %}
-                    <div class="blog-nav-item">
-                        <i class="fas fa-id-card"></i>
-                        <a class="gray-link" href="#">
-                            My Profile
-                        </a>
-                    </div>
-                    {% endblock %}
+                        {% block navbar_item_3 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-id-card"></i>
+                                <a class="gray-link" href="#">
+                                    My Profile
+                                </a>
+                            </div>
+                        {% endblock %}
 
-                    {% block navbar_item_4 %}
-                    <div class="blog-nav-item">
-                        <i class="fas fa-users"></i> 
-                        <a class="gray-link" href="#">
-                            Users
-                        </a>
-                    </div>
-                    {% endblock %}
+                        {% block navbar_item_4 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-users"></i> 
+                                <a class="gray-link" href="#">
+                                    Users
+                                </a>
+                            </div>
+                        {% endblock %}
+
+                        {% block navbar_item_5 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-sign-out-alt"></i>
+                                <a class="gray-link" href="{% url 'user:logout' %}">
+                                    Log out
+                                </a>
+                            </div> 
+                        {% endblock %}
+                    {% else %}
+                        {% block navbar_item_6 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-sign-in-alt"></i>
+                                <a class="gray-link" href="{% url 'user:login' %}">
+                                    Log in 
+                                </a>
+                            </div>  
+                        {% endblock %}
+                        {% block navbar_item_7 %}
+                            <div class="blog-nav-item">
+                                <i class="fas fa-address-card"></i>
+                                <a class="gray-link" href="{% url 'user:register' %}">
+                                    Register 
+                                </a>
+                            </div>  
+                        {% endblock %}  
+                    {% endif %}
+
                 </div>
             </div>
         </div>
