--- a/blog/templates/blog/blogentry_detail.html
+++ b/blog/templates/blog/blogentry_detail.html
@@ -1,11 +1,12 @@
-{% extends 'static_website/base.html' %}
-{% load static %}
+{% extends 'blog/blog_base.html' %} 
+{% load static %} 
 
-{% block head_elements %}
-<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
-<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
+{% block custom_head_elements %}
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js"></script>
+<script src='https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js'></script>
+<script>
+  tinymce.init({selector:'textarea'});
+</script>
 {% endblock %}
 
 {% block hero-image-type %}
@@ -13,44 +14,16 @@
 {% endblock %}
 
 {% block hero-image-text %}
-
 {% endblock %}
 
+{% block blog_heading %}
+<p class="heading-text padding-top padding-bottom text-center">
+    {{ blog_entry.title }}
+</p>
+{% endblock %}
 
-{% block body %}
+{% block blog_body %}
 <div class="container">
-    <p class="heading-text text-center">{{ blog_entry.title }}</p>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="text-center">
-                <div class="blog-nav-item">
-                    <i class="fas fa-bars"></i>
-                    <a class="gray-link" href="{% url 'blog:blog-list' %}">
-                        Portal
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-th-large"></i> 
-                    <a class="gray-link" href="#">
-                        My Posts
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-id-card"></i>
-                    <a class="gray-link" href="#">
-                        My Profile
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-users"></i> 
-                    <a class="gray-link" href="#">
-                        Users
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr>
     <div class="row">
       <div class="col-lg-6">
         {{ blog_entry.text_entry | safe }}
