--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -1,11 +1,7 @@
-{% extends 'static_website/base.html' %}
-{% load static %}
+{% extends 'blog/blog_base.html' %} 
+{% load static %} 
 
-{% block head_elements %}
-<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
-<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
+{% block custom_head_elements %}
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js"></script>
 <script src='https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js'></script>
 <script>
@@ -37,7 +33,6 @@
       </div>
       <div class="form-group">
         {{ form.text_entry }}
-      
       </div>
       <div class="row">
         <div class="col-lg-12 text-right">
