--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,61 +1,31 @@
-{% extends 'static_website/base.html' %}
-{% load static %}
+{% extends 'blog/blog_base.html' %} 
+{% load static %} 
 {% load crispy_forms_tags %}
 
-{% block head_elements %}
-<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
-<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
-{% endblock %}
-
 {% block hero-image-type %}
+    <div class="">
 {% endblock %}
 
 {% block hero-image-text %}
+
 {% endblock %}
 
-{% block body %}
-<div class="container content-top">
-    <p class="heading-text text-center">Create your Blog</p>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="text-center">
-                <div class="blog-nav-item">
-                    <i class="fas fa-bars"></i>
-                    <a class="gray-link" href="{% url 'blog:blog-list' %}">
-                        Portal
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-th-large"></i> 
-                    <a class="gray-link" href="#">
-                        My Posts
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-id-card"></i>
-                    <a class="gray-link" href="#">
-                        My Profile
-                    </a>
-                </div>
-                <div class="blog-nav-item">
-                    <i class="fas fa-users"></i> 
-                    <a class="gray-link" href="#">
-                        Users
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr>
-    {% if messages %}
-  <ul class="messages">
+{% block blog_heading %}
+<p class="heading-text padding-top padding-bottom text-center">
+    Create Your Blog
+</p>
+{% endblock %}
+
+{% block blog_body %}
+<div class="container">
     {% for message in messages %}
-      <li class="{{ message.tags }}">{{ message }}</li>
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+        {{ message }}
+    </div>
     {% endfor %}
-  </ul>
-{% endif %}
     <form method="POST">
         {% csrf_token %}
         <div class="form-group">
