Permissions for users, blogs now have authors, user list is up

--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -40,7 +40,7 @@
                         {% block navbar_item_2 %}
                             <div class="blog-nav-item">
                                 <i class="fas fa-th-large"></i> 
-                                <a class="gray-link" href="#">
+                                <a class="gray-link" href="{% url 'blog:user-posts' user.id %}">
                                     My Posts
                                 </a>
                             </div>
@@ -58,7 +58,7 @@
                         {% block navbar_item_4 %}
                             <div class="blog-nav-item">
                                 <i class="fas fa-users"></i> 
-                                <a class="gray-link" href="#">
+                                <a class="gray-link" href="{% url 'user:user-list' %}">
                                     Users
                                 </a>
                             </div>
