--- a/blog/templates/blog/blogentry_list.html
+++ b/blog/templates/blog/blogentry_list.html
@@ -46,7 +46,7 @@
         <div class="col-lg-6">
             <p class="reading-font">
                 <a class="gray-link" href="{% url 'blog:blog-detail' blog.id %}">{{ blog.title }}</a>
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated and blog.author.id == user.id %}
                 <a class="gray-link blog-heading-icon" href="{% url 'blog:blog-update' blog.id %}">
                     <i class="fas fa-edit"></i>
                 </a>
