New styles, fixing up resume, and blog design, issues on mobile but will be resolved later

--- a/blog/templates/blog/blogentry_confirm_delete.html
+++ b/blog/templates/blog/blogentry_confirm_delete.html
@@ -9,12 +9,11 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class="">
-{% endblock %}
+<div class="hero-blog-small-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-
-{% endblock %}
+{% endblock %} 
 
 {% block body %}
 <div class="container">
