--- a/blog/templates/blog/blogentry_detail.html
+++ b/blog/templates/blog/blogentry_detail.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class = "">
-{% endblock %}
+<div class="hero-blog-small-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-{% endblock %}
+{% endblock %} 
 
 {% block blog_heading %}
 <p class="heading-text padding-top padding-bottom text-center">
