--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -3,12 +3,17 @@
 {% load crispy_forms_tags %}
 
 {% block hero-image-type %}
-    <div class="">
-{% endblock %}
+<div class="hero-blog-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-
-{% endblock %}
+    <div class="container-fluid hero-blog-text">
+        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-blog-subheading text-center">
+            An Open-Source Platform
+        </p>
+    </div>
+{% endblock %} 
 
 {% block blog_heading %}
 <p class="heading-text padding-top padding-bottom text-center">
