--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -4,7 +4,7 @@
 {% block head_elements %}
 <link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
 <link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
-<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/hero_properties.css' %}"> 
 <link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
 {% endblock %} 
 
