--- a/static_website/static/static_website/navbar_style.css
+++ b/static_website/static/static_website/navbar_style.css
@@ -1,12 +1,24 @@
 .nav-text  {
-	color: black;
 	/*font-family: "Roboto";*/
 	font-size: 20px;
-	font-weight: 700;
-	/*border-bottom: 0.25rem solid transparent;*/
+	font-weight: 400;
+	border-bottom: 0.25rem solid transparent;
 }
 
-.nav-text:hover {
+.nav-text--dark {
+	color: black;
+}
+
+.nav-text--light {
+	color: white;
+}
+
+
+.nav-text--dark:hover {
 	color: gray;
 	/*border-bottom-color: gray;*/
+}
+
+.nav-text--light:hover {
+	color: #cccecf;
 }
