--- a/static_website/static/static_website/spacing.css
+++ b/static_website/static/static_website/spacing.css
@@ -6,6 +6,14 @@
     padding-top: 2rem;
 }
 
+.padding-top--2 {
+    padding-top: 3rem;
+}
+
 .padding-bottom {
     padding-bottom: 2rem;
+}
+
+.padding-bottom--2 {
+    padding-bottom: 3rem;
 }
