--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -26,7 +26,7 @@
 
 {% block desktop-home-nav %}
 <li class="nav-item active">
-    <a class="nav-link nav-text" href="{% url 'static_website:index' %}"><i class="fas fa-home"></i> Home</a>
+    <a class="nav-link nav-text nav-text--light" href="{% url 'static_website:index' %}"><i class="fas fa-home"></i> Home</a>
 </li>
 {% endblock %}
 
