--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,11 +4,17 @@
 
 
 {% block hero-image-type %}
-<div class = "">
-{% endblock %}
+<div class="hero-blog-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-{% endblock %}
+    <div class="container-fluid hero-blog-text">
+        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-blog-subheading text-center">
+            Your Content, Simplified
+        </p>
+    </div>
+{% endblock %} 
 
 {% block blog_heading %}
     <p class="heading-text padding-top padding-bottom text-center">
