--- a/user/templates/user/user_list.html
+++ b/user/templates/user/user_list.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class = "">
-{% endblock %}
+<div class="hero-blog-small-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-{% endblock %}
+{% endblock %} 
 
 {% block blog_heading %}
 <p class="heading-text padding-top padding-bottom text-center">
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block blog_body %}
-<div class="container">
+<div class="container padding-top">
     <table class="table table-borderless">
         <thead>
             <tr>
