--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -27,6 +27,10 @@
     <form method='POST'>
       {% csrf_token %}
       <div class="form-group padding-top">
+        {{ form.category.label_tag }}
+        {{ form.category }}
+      </div>
+      <div class="form-group">
           {{ form.title.label_tag }}
           {{ form.title }}
       </div>
