--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block hero-image-text %}
-<div class = "hero-resume-text text-center">
+<div class = "hero-text text-center">
   <p class = "hero-small-font">
     Resume & References
   </p>
@@ -49,12 +49,12 @@
       
       <div class="row">
         <div class = "col-lg-6">
-          <div class="text-center resume-heading">Wayne State University</div>
-          <div class="text-center resume-heading">B.S., Computer Science</div>
+          <p class="text-center reading-font-lg">Wayne State University</p>
+          <p class="text-center reading-font-lg">B.S., Computer Science</p>
         </div>
         <div class="col-lg-6">
-          <div class="text-center resume-heading">Average GPA: 3.65</div>
-          <div class="text-center resume-heading">Major GPA: 4.0</div>
+          <p class="text-center reading-font-lg">Average GPA: 3.65</p>
+          <p class="text-center reading-font-lg">Major GPA: 4.0</p>
         </div>
       </div>
       <div class="icon-heading-container padding-top--2 padding-bottom--2">
