--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -8,6 +8,20 @@
 <link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
 {% endblock %} 
 
+{% block mobile-blog-nav %}
+<li class="nav-item active">
+  <a class="nav-link nav-text" href="{% url 'blog:blog-list' %}"><i class="fas fa-blog"></i> SkyBlue Blogging</a>
+</li>
+{% endblock %}
+
+{% block desktop-blog-nav %}
+<li class="nav-item active">
+  <a class="nav-link nav-text nav-text--light" href="{% url 'blog:blog-list' %}">
+    <i class="fas fa-blog"></i> SkyBlue Blogging
+  </a>
+</li>
+{% endblock %}
+
 {% block custom_blog_head_elements %}
 
 {% endblock %}
