--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -50,6 +50,9 @@
       </li>
     {% endblock %}
       <li class = "nav-item">
+        <a class="nav-link nav-text" href="http://www.sapphiredesign.com"><i class="fas fa-gem"></i> Sapphire Design</a>
+      </li>
+      <li class = "nav-item">
         <a class="nav-link nav-text" href="http://github.com/wkatbey"><i class="fab fa-github"></i> Github</a>
       </li>
     </ul>
