Correcting navbar issue

--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -50,7 +50,7 @@
       </li>
     {% endblock %}
       <li class = "nav-item">
-        <a class="nav-link nav-text" href="http://www.sapphiredesign.com"><i class="fas fa-gem"></i> Sapphire Design</a>
+        <a class="nav-link nav-text" href="http://www.sapphiredesignmi.com"><i class="fas fa-gem"></i> Sapphire Design</a>
       </li>
       <li class = "nav-item">
         <a class="nav-link nav-text" href="http://github.com/wkatbey"><i class="fab fa-github"></i> Github</a>
@@ -92,7 +92,7 @@
         {% block blog-create-link %}
         {% endblock %}
           <li class = "nav-item">
-            <a class="nav-link nav-text nav-text--light" href="http://www.sapphiredesign.com"><i class="fas fa-gem"></i> Sapphire Design</a>
+            <a class="nav-link nav-text nav-text--light" href="http://www.sapphiredesignmi.com"><i class="fas fa-gem"></i> Sapphire Design</a>
           </li>
           <li class = "nav-item">
             <a class="nav-link nav-text nav-text--light" href="http://github.com/wkatbey"><i class="fab fa-github"></i> Github</a>
