--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -18,10 +18,10 @@
 
 {% block hero-image-text %}
 <div class = "hero-text text-center">
-  <p class = "hero-small-font">
+  <p class = "hero-small-heading">
     Resume & References
   </p>
-  <p class="hero-small-sub-font">
+  <p class="hero-small-subheading">
     Browse through my skills, education, and experience
   </p>
 </div>
