--- a/static_website/static/static_website/hero_properties.css
+++ b/static_website/static/static_website/hero_properties.css
@@ -26,28 +26,30 @@
     transform: translateY(5rem);
 }
 
-.hero-small-font {
-    font-size: 50px;
+.hero-small-heading {
+    font-size: 3.7rem;
     font-weight: 400;
-    color: #000000;
+    color: white;
     text-align: center;
 }
 
-.hero-small-sub-font {
-    font-size: 30px;
+.hero-small-subheading {
+    font-size: 2rem;
     font-weight: 400;
-    color: #000000;
+    color: white;
     text-align: center;
 }
 
 .hero-home-heading {
     font-weight: 400;
     font-size: 4rem;
+    color: white;
 }
 
 .hero-home-subheading {
     font-weight: 400;
     font-size: 2rem;
+    color: white;
 }
 
 .hero-large-heading {
@@ -64,61 +66,27 @@
     text-align: center;
 }
 
+
 /* ----------- Non-Retina Screens ----------- */
 
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
-    div.hero-image {
-        height: 45rem;
+@media (min-device-width: 769px) and (max-device-width: 1100px) {
+    .hero-image {
+        height: 50rem;
     }
-    div.hero-sub-image {
-        height: 40rem;
-    }
-    div.hero-text {
-        transform: translateY(9rem);
-    }
-    div.hero-small-text {
-        transform: translate(-20%, -50%);
+    .hero-text {
+        padding-top: 5rem;
     }
 }
 
-@media (min-device-width: 992px) and (max-device-width: 1199.98px) {
-    div.hero-large-font {
-        font-size: 30px;
-        text-align: left;
-        font-weight: 400;
-        padding-bottom: 10px;
+@media (min-device-width: 576px) and (max-device-width: 768px) {
+    .hero-image {
+        height: 30rem;
     }
-    div.hero-large-sub-font {
-        font-size: 20px;
-        text-align: left;
-        font-weight: 400;
-    }
-    div.hero-small-font {
-        font-size: 25px;
-        text-align: left;
-        font-weight: 400;
-        padding-bottom: 10px;
-    }
-    div.hero-small-sub-font {
-        font-size: 20px;
-        text-align: left;
-        font-weight: 400;
-    }
-    div.hero-text {
-        transform: translate(3, 3);
-    }
-    div.hero-small-text {
-        top: 50%;
-        left: 20%;
-        transform: translate(-20%, -50%);
-    }
-    div.hero-image {
-        height: 400px;
-    }
-    div.hero-sub-image {
-        height: 350px;
+    .hero-text {
+        padding-top: 5rem;
     }
 }
+
 
 /*Extra Small Devices*/
 
@@ -132,36 +100,14 @@
     .hero-home-subheading {
         font-size: 1.5rem;
     }
-    .hero-small-font {
-        font-size: 2.2rem;
-    }
-    .hero-small-sub-font {
-        font-size: 1.5rem;
-    }
-    div.hero-large-font {
-        font-size: 30px;
-        font-weight: 400;
-        padding-bottom: 10px;
-    }
-    div.hero-large-sub-font {
-        font-size: 20px;
-        font-weight: 400;
-    }
     div.hero-text {
         padding-top: 1rem;
         transform: translate(0rem, 0rem);
     }
-    div.hero-small-text {
-        position: relative;
-        transform: translateY(3.4rem);
-    }
-    div.hero-image {
-        height: 13rem;
-        background-image: linear-gradient(to right, #56CCF2, #2F80ED);
+    .hero-image {
+        height: 17rem;
     }
     div.hero-sub-image {
         height: 14rem;
-        background-image: linear-gradient(to right, #56CCF2, #2F80ED);
     }
 }
-
