--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -28,7 +28,7 @@
   {% endblock %}
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-dark navbar-blue navbar-mobile">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-mobile">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMobileContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
