--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -1,4 +1,5 @@
 {% extends './base.html' %}
+{% load crispy_forms_tags %}
 
 {% block hero-image-text %}
 <div class="container-fluid hero-text">
@@ -130,6 +131,35 @@
         </div>
       </div>
     </div>
+    <p class = "heading-text padding-top padding-bottom text-center">
+      Send me an Email! <img class="pb-2" src="https://img.icons8.com/nolan/64/000000/email.png">
+    </p>
+    <form method="POST">
+      {% csrf_token %}
+      <div class="row">
+          <div class="col-lg-6">
+              {{ form.first_name | as_crispy_field }}
+          </div>
+          <div class="col-lg-6">
+              {{ form.last_name | as_crispy_field }}
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6">
+              {{ form.email | as_crispy_field }}
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-12">
+              {{ form.inquiry | as_crispy_field }}
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-12">
+              <button type="submit" class="btn btn-outline-dark btn-block">Send</button>
+          </div>
+      </div>
+    </form>
   </div>
 </main>
 
