Correcting responsiveness issue on desktop browsers

--- a/static_website/static/static_website/navbar_style.css
+++ b/static_website/static/static_website/navbar_style.css
@@ -31,7 +31,7 @@
     display: block;
 }
 
-@media (min-device-width: 300px) and (max-device-width: 1000px) {
+@media (min-width: 300px) and (max-width: 1000px) {
     .navbar-mobile {
         display: block;
     }
