--- a/static_website/static/static_website/hero_properties.css
+++ b/static_website/static/static_website/hero_properties.css
@@ -1,6 +1,5 @@
 .hero-image {
     background-image: url("./cover-image-3.jpg");
-    height: 62.5rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -66,10 +65,13 @@
     text-align: center;
 }
 
+@media (min-width: 1101px) {
+    .hero-image {
+        height: 62.5rem;
+    }
+}
 
-/* ----------- Non-Retina Screens ----------- */
-
-@media (min-device-width: 769px) and (max-device-width: 1100px) {
+@media (min-width: 769px) and (max-width: 1100px) {
     .hero-image {
         height: 50rem;
     }
@@ -78,7 +80,7 @@
     }
 }
 
-@media (min-device-width: 576px) and (max-device-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
     .hero-image {
         height: 30rem;
     }
@@ -90,7 +92,7 @@
 
 /*Extra Small Devices*/
 
-@media (min-device-width: 300px) and (max-device-width: 575.98px) {
+@media (min-width: 300px) and (max-width: 575.98px) {
     #introButton {
         display: none;
     }
@@ -98,6 +100,12 @@
         font-size: 2.2rem;
     }
     .hero-home-subheading {
+        font-size: 1.5rem;
+    }
+    .hero-small-heading {
+        font-size: 2.2rem;
+    }
+    .hero-small-subheading {
         font-size: 1.5rem;
     }
     div.hero-text {
