Links to categories in blog cat page

--- a/blog/templates/blog/blogentry_list_category.html
+++ b/blog/templates/blog/blogentry_list_category.html
@@ -19,7 +19,7 @@
       <div class="col-lg-6">
         <p class="blog-category">
         {% for index, breadcrumb in breadcrumbs %}
-          <a href="#" class="blog-category-link">{{ breadcrumb.title }}</a>
+          <a href="{% url 'blog:blogs-by-category' breadcrumb.id %}" class="blog-category-link">{{ breadcrumb.title }}</a>
           {% if index < breadcrumbs_max %}
             /
           {% endif %}
