--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -30,29 +30,20 @@
           {{ form.title.label_tag }}
           {{ form.title }}
       </div>
-      <div id="editor-container" class="form-group">
+      <div class="form-group">
+        {{ form.text_entry }}
       </div>
-      {{ form.text_entry }}
       <div class="row pt-2">
         <div class="col-lg-12 text-right">
           {% if object %}
           <input type="submit" class="btn btn-outline-primary" value="Save Changes">
           {% else %}
-          <input type="submit" class="btn btn-outline-primary" onClick = "savePost()" value="Post">
+          <input type="submit" class="btn btn-outline-primary" value="Post">
           {% endif %}
         </div>
       </div>
     </form>
 </div>
-
-<script>
-  function savePost() {
-    let editorContent = quill.container.innerHTML;
-    let savedEditorContent = document.getElementsByName('text_entry')[0];
-    console.log("Am I even here");
-    savedEditorContent.value = editorContent;
-  }
-</script>
 {% endblock %}
 
 {% block custom_footer_elements %}
