--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -24,12 +24,12 @@
   <link rel="stylesheet" href="{% static 'static_website/icons.css' %}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Theme included stylesheets -->
-  <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-  <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
-  <!-- Core build with no theme, formatting, non-essential modules -->
-  <link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
-  <script src="//cdn.quilljs.com/1.3.6/quill.core.js"></script>
+  <script src="https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js"></script>
+  <script>
+    tinymce.init({
+      selector: '#text-editor'
+    });
+  </script>
   {% block head_elements %}
   {% endblock %}
 </head>
