Setting height of hero home image to 100vh, and modifying the meta tag to include viewport height. Re-including button on mobile

--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, height=device-height initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Read up on me, Wassim Katbey, Full-Stack Software Developer. I wrote this website to display my 
   skillset and accomplishments">
   <meta name="author" content="Wassim Katbey">
