--- a/static_website/static/static_website/hero_properties.css
+++ b/static_website/static/static_website/hero_properties.css
@@ -67,22 +67,23 @@
 
 @media (min-width: 1101px) {
     .hero-image {
-        height: 62.5rem;
+        height: 100vh;
     }
 }
 
 @media (min-width: 769px) and (max-width: 1100px) {
     .hero-image {
-        height: 50rem;
+        height: 100vh;
     }
     .hero-text {
+        transform: translate(0rem, 2.4rem);
         padding-top: 5rem;
     }
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
     .hero-image {
-        height: 30rem;
+        height: 100vh;
     }
     .hero-text {
         padding-top: 5rem;
@@ -93,14 +94,11 @@
 /*Extra Small Devices*/
 
 @media (min-width: 300px) and (max-width: 575.98px) {
-    #introButton {
-        display: none;
-    }
     .hero-home-heading {
-        font-size: 2.2rem;
+        font-size: 2.8rem;
     }
     .hero-home-subheading {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
     }
     .hero-small-heading {
         font-size: 2.2rem;
@@ -110,10 +108,10 @@
     }
     div.hero-text {
         padding-top: 1rem;
-        transform: translate(0rem, 0rem);
+        transform: translate(0rem, 7rem);
     }
     .hero-image {
-        height: 17rem;
+        height: 100vh;
     }
     div.hero-sub-image {
         height: 14rem;
