Correcting Icons8 links

--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -35,7 +35,7 @@
 <main>
   <div class = "container content-top">
     <p class = "heading-text text-center" id="intro">
-      Allow me to introduce myself <img src="https://img.icons8.com/nolan/64/000000/identity-theft.png">
+      Allow me to introduce myself <img src="https://img.icons8.com/nolan/64/identity-theft.png">
     </p>
     <hr class="padding-bottom">
   	<div class="row padding-bottom">
@@ -98,7 +98,7 @@
   </div>
   <div class="container">
     <p class = "heading-text padding-top padding-bottom text-center">
-      Discover my work <img src="https://img.icons8.com/nolan/64/000000/cafe.png">
+      Discover my work <img src="https://img.icons8.com/nolan/64/cafe.png">
     </p>
     <div class="row">
       <div class="col-lg-12">
@@ -113,7 +113,7 @@
   <br>
   <div class="container">
     <p class = "heading-text padding-top padding-bottom text-center">
-      Let's get in contact <img src="https://img.icons8.com/nolan/64/000000/contacts.png">
+      Let's get in contact <img src="https://img.icons8.com/nolan/64/contacts.png">
     </p>
     <div class="row">
       <div class = "col-lg-4">
@@ -132,7 +132,7 @@
       </div>
     </div>
     <p class = "heading-text padding-top padding-bottom text-center">
-      Send me an Email! <img class="pb-2" src="https://img.icons8.com/nolan/64/000000/email.png">
+      Send me an Email! <img class="pb-2" src="https://img.icons8.com/nolan/64/email.png">
     </p>
     <form method="POST">
       {% csrf_token %}
